<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/AuthBackground">

    <ImageView
        style="@style/AuthBackgroundImage"
        android:contentDescription="@string/content_desc_background_image" />
    <TextView
        android:id="@+id/text_view_title"
        style="@style/AuthTitle" />
    <TextView
        android:id="@+id/text_view_subtitle"
        style="@style/AuthSubtitle" />
    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthFieldContainer" >
        <EditText
            android:id="@+id/edit_text_username"
            style="@style/AuthEditText"
            android:hint="@string/hint_username" >
            <requestFocus />
        </EditText>
        <EditText
            android:id="@+id/edit_text_password"
            style="@style/AuthEditText"
            android:hint="@string/hint_password"
            android:inputType="textPassword" />
        <EditText
            android:id="@+id/edit_text_email"
            style="@style/AuthEditText"
            android:hint="@string/hint_email"
            android:inputType="textEmailAddress" />
    </LinearLayout>
    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_divider"
        android:src="@drawable/button_divider" />
    <Button
        android:id="@+id/button_signup"
        style="@style/AuthButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:text="@string/button_signup" />
    <Button
        android:id="@+id/button_cancel"
        style="@style/AuthButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:text="@string/button_cancel" />
    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="invisible" />




</RelativeLayout>
