<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_orange_background"
    android:paddingTop="@dimen/activity_vertical_margin" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:background="@android:color/white"
        android:orientation="vertical" >
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_title_label" />
        <EditText
            android:id="@+id/restaurant_title"
            style="@style/restaurantEditText"
            android:hint="@string/restaurant_title_hint" />
        <TextView
            style="@style/restaurantTextView"
            android:text="Category" />
        <Spinner
            android:id="@+id/category_spinner"
            android:layout_width="fill_parent"
            android:layout_height="40dp" />
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_address_label" />
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <EditText
                android:id="@+id/restaurant_address"
                style="@style/restaurantEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/restaurant_address_hint" />
            <ImageButton
                android:id="@+id/map_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_map_button" />
        </LinearLayout>
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_city_label" />
        <EditText
            android:id="@+id/restaurant_city"
            style="@style/restaurantEditText"
            android:hint="@string/restaurant_city_hint" />
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_phone_label" />
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <EditText
                android:id="@+id/restaurant_phone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:hint="@string/restaurant_phone_hint"
                android:inputType="phone" />
            <ImageButton
                android:id="@+id/phone_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/apptheme_call_button" />
        </LinearLayout>
        <TextView
            android:id="@+id/updated_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <TextView
                style="@style/restaurantDayOfWeekTextView"
                android:text="@string/master_hours_label" />
            <Button
                android:id="@+id/master_hours_open"
                style="@style/restaurantHoursButton"
                android:text="@string/master_open_label"
                android:textSize="12sp" />
            <Button
                android:id="@+id/master_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin"
                android:text="@string/master_close_label"
                android:textSize="12sp" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/sunday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/sunday_check_label" />
            <Button
                android:id="@+id/sunday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/sunday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="5dp" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/monday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/monday_check_label" />
            <Button
                android:id="@+id/monday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/monday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/tuesday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/tuesday_check_label" />
            <Button
                android:id="@+id/tuesday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/tuesday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/wednesday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/wednesday_check_label" />
            <Button
                android:id="@+id/wednesday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/wednesday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/thursday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/thursday_check_label" />
            <Button
                android:id="@+id/thursday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/thursday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/friday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/friday_check_label" />
            <Button
                android:id="@+id/friday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/friday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <LinearLayout
            style="?android:listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <CheckBox
                android:id="@+id/saturday_check"
                style="@style/restaurantCheckbox"
                android:text="@string/saturday_check_label" />
            <Button
                android:id="@+id/saturday_hours_open"
                style="@style/restaurantHoursButton" />
            <Button
                android:id="@+id/saturday_hours_close"
                style="@style/restaurantHoursButton"
                android:layout_marginRight="@dimen/button_margin" />
        </LinearLayout>
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_notes_label" />
        <EditText
            android:id="@+id/restaurant_notes"
            style="@style/restaurantEditText"
            android:hint="@string/restaurant_notes_hint"
            android:inputType="textNoSuggestions|textCapSentences|textMultiLine" />
        <TextView
            style="@style/restaurantTextView"
            android:text="@string/restaurant_picture_label" />
        <ImageView
            android:id="@+id/restaurantImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/content_desc_restaurant_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <Button
                android:id="@+id/takePictureButton"
                style="@style/restaurantSaveAndCancelButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_picture" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingBottom="4dp" >
            <Button
                android:id="@+id/saveButton"
                style="@style/restaurantSaveAndCancelButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_save" />
            <Button
                android:id="@+id/cancelButton"
                style="@style/restaurantSaveAndCancelButtons"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/button_cancel_restaurant" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>