<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/menu_search"
        android:actionViewClass="android.widget.SearchView"
        android:icon="@drawable/ic_action_previous_item"
        android:showAsAction="always"
        android:title="@string/search_title"
        tools:ignore="AppCompatResource" />
    <item
        android:id="@+id/menu_item_new_restaurant"
        android:icon="@drawable/ic_action_new"
        android:showAsAction="always"
        android:title="@string/new_restaurant"
        tools:ignore="AppCompatResource" />
    <!--
    <item
    android:id="@+id/action_my_restaurants"
    android:title="@string/menu_my_restaurants_label">
    </item>
    <item
    android:id="@+id/action_all_restaurants"
    android:title="@string/menu_all_restaurants_label">
    </item>
    -->
    <item
        android:id="@+id/action_logout"
        android:title="@string/menu_logout_label"
        >
    </item>


</menu>