<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/restaurant_list_vertical_margin"
        android:layout_marginLeft="@dimen/restaurant_list_horizontal_margin"
        android:layout_marginRight="@dimen/restaurant_list_horizontal_margin"
        android:layout_marginTop="@dimen/restaurant_list_vertical_margin"
        android:background="@drawable/background_activated"
        android:baselineAligned="false"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/restaurant_list_item_titleTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="18sp"
                android:textStyle="bold"
                android:textColor="@android:color/black"/>

            <TextView
                android:id="@+id/restaurant_list_item_addressTextView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="4dp"
                android:paddingRight="4dp"
                android:textSize="12sp"
                android:textColor="@android:color/black"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/restaurant_list_sunday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="20dp"
                android:text="@string/sunday_short" />
            <TextView
                android:id="@+id/restaurant_list_monday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/monday_short" />
            <TextView
                android:id="@+id/restaurant_list_tuesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/tuesday_short" />
            <TextView
                android:id="@+id/restaurant_list_wednesday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/wednesday_short" />
            <TextView
                android:id="@+id/restaurant_list_thursday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/thursday_short" />
            <TextView
                android:id="@+id/restaurant_list_friday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/friday_short" />
            <TextView
                android:id="@+id/restaurant_list_saturday"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="4dp"
                android:text="@string/saturday_short" />
        </LinearLayout>

        <ImageView
            android:id="@+id/favourite_image"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="@drawable/ic_rating_not_important" />
    </LinearLayout>

</LinearLayout>