<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".LoginActivity">

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/progressBar"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="126dp"
        android:indeterminate="false"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_username"
        android:hint="@string/hint_username"
        android:layout_centerVertical="true"
        android:gravity="center_horizontal"
        android:layout_alignRight="@+id/edit_text_password"
        android:layout_alignEnd="@+id/edit_text_password"
        android:layout_alignLeft="@+id/edit_text_password"
        android:layout_alignStart="@+id/edit_text_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_password"
        android:hint="@string/hint_password"
        android:layout_below="@+id/edit_text_username"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/edit_text_password"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        >

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/button_signup"
            android:id="@+id/button_signup"
            android:layout_weight="1"
             />

        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/button_login"
            android:id="@+id/button_login"
            />
    </LinearLayout>

</RelativeLayout>
